# rust-wgpu-engine

./: '  .gitignore  Cargo.toml  README.md  animation_format4.py  build.rs  build_output.txt  check_final.txt  check_out.txt  copy_files.bat  copy_files.sh  count_lines.sh  poop.bat  run_server.sh  rust-toolchain.toml
.augment/rules/: architecture-rules.md  ui-implementation.md
.cargo/: config.toml
.cursor/rules/: architecture-rules.mdc  dead-code-allowance.mdc  dependencies-no-drift.mdc  destructive-ops-safety.mdc  no-direct-edits.mdc  no-magic-automation.mdc  prior-art-research-required.mdc  ui-implementation.mdc
.github/: copilot-instructions.md
.github/workflows/: deploy-itch.yml
config/: abilities_config.json  emitter_data.json  emitter_data.toml  enemy_behavior_tree.json  enemy_bt_melee.json  enemy_bt_ranged.json  entity_config.json  factions_config.json  game_config.json  game_config.sample.json  particle_emitters.toml  player_data.json  player_save_data.json  round_data.json  sound_config.json  sound_config.sample.json  weapon_anim_map.json  weapon_pools_config.json  world_data.json  world_data.toml
doc/jdwise/: BehaviorTreev1.drawio  blender_notes.txt  optimizations.txt  sound_stuff.txt  state_machine_research.txt  todo.txt
docs/: fmod_web_setup.md  full_web_game_implementation_handoff.md  rendering_phase_1.md  rendering_phase_3_handoff.md  rendering_phase_4_webgl2_audit.md  rendering_phase_5_handoff.md  rendering_phase_6_accelerated_webgl_handoff.md  rendering_phase_6_handoff.md  rendering_phase_6_pr2_handoff.md  rendering_phase_7_wasm_compile_handoff.md  wasm_hdr_shadows_handoff.md  web_local_server.md  web_textured_model_smoke_handoff.md
resources/blender/: HILL_DESERT_001.blend  HILL_DESERT_001.blend1  HILL_DESERT_002.blend  HILL_DESERT_002.blend1  HILL_DESERT_003.blend  HILL_DESERT_003.blend1  HILL_DESERT_004.blend  HILL_DESERT_004.blend1  HILL_DESERT_005.blend  HILL_DESERT_005.blend1  MOUNTAIN_001.blend  MOUNTAIN_001.blend1  MOUNTAIN_002.blend  MOUNTAIN_002.blend1  MOUNTAIN_003.blend  MOUNTAIN_003.blend1  MOUNTAIN_004.blend  MOUNTAIN_004.blend1  MOUNTAIN_005.blend  MOUNTAIN_005.blend1  MOUNTAIN_006.blend  MOUNTAIN_006.blend1  MOUNTAIN_007.blend  MOUNTAIN_007.blend1  MOUNTAIN_008.blend  MOUNTAIN_008.blend1  MOUNTAIN_009.blend  MOUNTAIN_009.blend1  MOUNTAIN_010.blend  MOUNTAIN_010.blend1  a_tube.blend  a_tube.blend1  blocky_trashbot.blend  blocky_trashbot.blend1  cactus1.blend  cactus1.blend1  cactus2.blend  cactus2.blend1  desert_tree1.blend  desert_tree1.blend1  (+17 more)
resources/shaders/: bloom.glsl  blur.glsl  color_for_texture.glsl  custom_ui.glsl  custom_ui_es300.glsl  debug_depth_quad.glsl  debug_depth_quad_es300.glsl  depth_shader.glsl  depth_shader_es300.glsl  frostbite_volumetric_fog_compute.glsl  fxaa.glsl  fxaa_es300.glsl  game_ui.glsl  gizmo.glsl  gizmo.wgsl  hdr.glsl  hdr_es300.glsl  minimal_world_es300.glsl  model.glsl  particles.glsl  particles.wgsl  particles_es300.glsl  point_light.glsl  skybox.glsl  skybox.wgsl  skybox_es300.glsl  skybox_wasm.wgsl  test_combined.glsl  text.glsl  ui_overlay.glsl  ultralight_ui.glsl  web_game_scene_es300.glsl  web_smoke_scene_es300.glsl
resources/ui/: ability_bar.ron  editor.html  engine_ui.slint  gallery_view.ron  game_hud.ron  game_hud.slint  game_root.slint  game_ui.slint  pause_menu.html  pause_menu.ron  pause_menu.slint  player_debug.slint  theme.ron  toast_container.ron
scripts/: build_web.ps1  build_web.sh  stop_python_http_server.ps1
src/: assets.rs  camera.rs  combat_system.rs  command_buffer.rs  damage_resolution_system.rs  damage_volume_spawn_system.rs  entity_manager.rs  enums_types.rs  game.rs  game_state.rs  grid.rs  grounding_solver.rs  input.rs  items.rs  junk.rs  lights.rs  macros.rs  main.rs  movement_system.rs  particles.rs  physics.rs  platform.rs  projectile_system.rs  renderer.rs  shaders.rs  some_data.rs  sparse_set.rs  spawn_system.rs  state_machines.rs  status_effect_system.rs  terrain.rs  time.rs  uniforms.rs  web_game.rs  world.rs
src/abilities/: mod.rs
src/animation/: animation.rs  animation_system.rs  animator.rs  data_loader.rs  mod.rs  model.rs  skellington.rs
src/config/: base_config.rs  emitter_data.rs  entity_config.rs  factions_config.rs  game_config.json  game_config.rs  mod.rs  sound_config.rs  weapon_anim_map.rs  world_data.rs
src/debug/: gizmos.rs  mod.rs  write.rs
src/sound/: fmod.rs  mod.rs  (+2 more)
web/: game_fmod_bridge.js  index.html
(+281 files in other folders)
