[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
glam = { version = "0.29.2", features = ["serde"] }
image = "0.25.5"
imgui-opengl-renderer = "0.12.1"
imgui = "0.9.0"
russimp-sys = "2.0.2"
russimp = "3.2.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.171"
toml = "0.8.22"
nalgebra = { version = "0.33.2", features = [ "convert-glam029" ] }
rapier3d = { version = "0.26.1", features = [ "simd-stable" ] }


[build-dependencies]
