[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
winit = "0.30.12"
imgui-winit-support = "0.13.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
glam = { version = "0.29.2", features = ["serde"] }
image = { version = "0.25.5", features = ["serde"] }
imgui-opengl-renderer = "0.13.0"
imgui = "0.12.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.171"
toml = "0.8.22"
nalgebra = { version = "0.33.2", features = [ "convert-glam029" ] }
rapier3d = { version = "0.26.1", features = [ "simd-stable", "parallel", "serde-serialize" ] }
slint = { version = "1.14.1", default-features = false, features = ["std", "compat-1-2", "renderer-software", "software-renderer-systemfonts"] }

[build-dependencies]
slint-build = "1.14.1"

[profile.rwd] # release with debug
inherits = "release"
debug = true

[profile.dev.package."rapier3d"]
opt-level = 3
[profile.dev.package."nalgebra"]
opt-level = 3
[profile.dev.package."parry3d"]
opt-level = 3 

[features]
gl_debug = []
track_draw_calls = []

[patch.crates-io]
imgui-opengl-renderer = { git = "https://github.com/joshthecomposer/rust-imgui-opengl-renderer.git", package = "imgui-opengl-renderer", branch = "master" }
