[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glam = { version = "0.29.2", features = ["serde"] }
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
toml = "0.8.22"
nalgebra = { version = "0.33.2", features = [ "convert-glam029" ] }
glyph_brush = "0.7"
winit = "0.30.12"
rand = "0.9.0"
rand_chacha = "0.9.0"
rapier3d = { version = "0.26.1", features = [ "simd-stable", "serde-serialize" ] }
wgpu = "29.0.3"
pollster = "0.4"
bytemuck = { version = "=1.25.0", features = [ "derive" ] }

[dependencies.image]
version = "0.25.10"
default-features = false
features = ["png", "serde", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32.3"
glutin-winit = "0.5.0"
imgui-winit-support = { version = "0.13.0", optional = true }
imgui-opengl-renderer = { version = "0.13.0", optional = true }
imgui = { version = "0.12.0", optional = true }
libc = { version = "0.2.171", optional = true }
rapier3d = { version = "0.26.1", features = [ "parallel" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "EventTarget",
    "CssStyleDeclaration",
    "Window",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlRenderbuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "console",
] }

[[bin]]
name = "serve-web"
path = "src/bin/serve_web.rs"
required-features = ["native"]

[profile.rwd] # release with debug
inherits = "release"
debug = true

[profile.dev.package."rapier3d"]
opt-level = 3
[profile.dev.package."nalgebra"]
opt-level = 3
[profile.dev.package."parry3d"]
opt-level = 3 

[features]
default = ["native", "native_audio", "editor_ui"]
native = []
native_audio = ["dep:libc"]
editor_ui = ["dep:imgui", "dep:imgui-winit-support", "dep:imgui-opengl-renderer"]
web = []
web_audio = []
gl_debug = []
track_draw_calls = []

[patch.crates-io]
imgui-opengl-renderer = { git = "https://github.com/joshthecomposer/rust-imgui-opengl-renderer.git", package = "imgui-opengl-renderer", branch = "master" }
